--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: multiselect_tree
 description: A simple multiselect dropdown which can contains differents level of children.
 version: 0.0.1
-homepage:
+homepage: https://github.com/GiuseppeSperanza/multiselect_tree
 
 environment:
   sdk: '>=2.18.1 <3.0.0'
