--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
-  multiselect_tree:
+  multiselect_nested:
     path: './../'
 
 dev_dependencies:
